Fix: toggle password visibility saves password (#1965)
* preventing input blur to fire when toggling password visibility

* fixed password hint behaving like a button

* updated snapshots

--- a/src/components/SettingsDialog/Components/SettingsInput.scss
+++ b/src/components/SettingsDialog/Components/SettingsInput.scss
@@ -53,6 +53,7 @@
 }
 
 .settings-input__children {
+  all: unset;
   z-index: 1;
   width: 100%;
   display: flex;
